# asteroid-lightcurves

./: .gitignore  EDA.ipynb  LSTM.ipynb  README.md  asteroid_download.ipynb  constants.py  environment.yml  interpolation.ipynb  pyproject.toml  requirements.txt  stats.ipynb
.dvc/: config
data/: .gitignore  asteroids.csv.dvc  asteroids.dvc  asteroids_freq_data.json  asteroids_freq_data.json.dvc  config.json  dataset_results.json.dvc  features.dvc  test.txt.dvc
data/raw/: .gitignore  Eros.dvc  Juno_1.dvc  Juno_2.dvc  Pallas.dvc  Pallas_1.dvc  Pallas_2.dvc  Pallas_3.dvc  Vesta.dvc
notebooks/: EDA.ipynb  LSTM.ipynb  asteroid_download.ipynb  axes_location.ipynb  axes_location_xgboost.ipynb  constants.py  damit_export_handler.ipynb  freq_data.ipynb  interpolation.ipynb  multiple_freqs_datasets.ipynb  multiple_freqs_ml.ipynb  neural_clipped.ipynb  neural_padded.ipynb  stats.ipynb  xgboost.ipynb  xgboost_freqs_datasets.ipynb
src/astrofit/damit_connector/: __init__.py  asteroid_downloader.py
src/astrofit/model/: __init__.py  asteroid.py  lightcurve.py  lightcurve_bin.py
src/astrofit/utils/: __init__.py  asteroid_loader.py  frequency_decomposer.py  lightcurve_binner.py  lightcurve_plotter.py  lightcurve_splitter.py
src/damit_connector/: __init__.py  asteroid_downloader.py
src/model/: __init__.py  asteroid.py  lightcurve.py  point.py
src/model/enums/: __init__.py  enum_sort_options.py
src/plotter/: __init__.py  lightcurve_plotter.py
src/utils/: __init__.py  asteroid_loader.py  lightcurve_binner.py  lightcurve_plotter.py  lightcurve_splitter.py
(+6 files in other folders)
